fix bugs on small devices

--- a/my-app/src/Components/ChecklistCategory/ChecklistCategory.module.css
+++ b/my-app/src/Components/ChecklistCategory/ChecklistCategory.module.css
@@ -67,6 +67,9 @@
       padding: 0 4px 4px 4px;
 
   }
+  .title{
+    padding:0 10px;
+  }
 }
 
 
